2014-03-31  Jan Djärv  <jan.h.d@swipnet.se>

	* nsmenu.m (free_frame_tool_bar): Set wait_for_tool_bar = NO (Bug#16976)

2014-03-30  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (updateFrameSize:): If waiting for the tool bar and tool
	bar is zero height, just return (Bug#16976).
	(initFrameFromEmacs:): Initialize wait_for_tool_bar.

	* nsterm.h (EmacsView): Add wait_for_tool_bar.

	* nsmenu.m (update_frame_tool_bar): Return early if view or toolbar
	is nil.  If waiting for toolbar to complete, force a redraw.

2014-03-28  Glenn Morris  <rgm@gnu.org>

	* emacs.c (emacs_version): Use PACKAGE_VERSION rather than VERSION.
	(emacs_bugreport): New variable.
	(usage_message): Use PACKAGE_BUGREPORT.
	(syms_of_emacs) <report-emacs-bug-address>: New variable.

	* emacs.c (syms_of_emacs) <system-configuration-features>: New var.

2014-03-27  Paul Eggert  <eggert@cs.ucla.edu>

	Port recent signal-related changes to FreeBSD.
	Problem reported by Herbert J. Skuhra.
	* lisp.h (block_tty_out_signal, unblock_tty_out_signal):
	Move decls from here ...
	* syssignal.h: ... to here, so that lisp.h doesn't depend on signal.h.

2014-03-27  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* w32term.c (x_draw_image_glyph_string): Fix computation of height
	and width of image background when it is displayed with a 'box'
	face.  (Bug#17115)

2014-03-27  Paul Eggert  <eggert@penguin.cs.ucla.edu>

	More backward-compatible fix to char-equal core dump (Bug#17011).
	* editfns.c (Fchar_equal): In unibyte buffers, assume values in
	range 128-255 are raw bytes.  Suggested by Eli Zaretskii.

2014-03-27  Juanma Barranquero  <lekktu@gmail.com>

	* image.c (init_svg_functions): When loading SVG-related libraries,
	free already loaded libraries if the initialization fails.
	(rsvg_handle_set_size_callback): Remove declaration, unused.

2014-03-26  Paul Eggert  <eggert@cs.ucla.edu>

	Fix core dump in char-equal (Bug#17011).
	* editfns.c (Fchar_equal): Do not use MAKE_CHAR_MULTIBYTE in