@@ -1,3 +1,9 @@
+2014-03-31  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* search.c (Freplace_match): Use make_specified_string.
+	* xterm.c, w32term.c (x_set_glyph_string_gc): Use emacs_abort
+	to catch bogus override face of glyph strings.
+
 2014-03-31  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* nsmenu.m (free_frame_tool_bar): Set wait_for_tool_bar = NO (Bug#16976)
